Allow lower case keysyms in keybindings when shift is involved.
Also enabled config reload via SIGUSR1.

--- a/st.cfg
+++ b/st.cfg
@@ -509,26 +509,27 @@ keybindings = (
 	{ modifier = "Any", key = "Print", function = "printsel" },
 	{ modifier = "Ctrl+Shift", key = "Prior", function = "zoom", argument = +1 },
 	{ modifier = "Ctrl+Shift", key = "Next", function = "zoom", argument = -1 },
-	{ modifier = "Ctrl+Shift", key = "C", function = "clipcopy" },
-	{ modifier = "Ctrl+Shift", key = "V", function = "clippaste" },
-	{ modifier = "Ctrl+Shift", key = "O", function = "changealpha", argument = +0.05 },
-	{ modifier = "Ctrl+Shift", key = "P", function = "changealpha", argument = -0.05 },
+	{ modifier = "Ctrl+Shift", key = "c", function = "clipcopy" },
+	{ modifier = "Ctrl+Shift", key = "v", function = "clippaste" },
+	{ modifier = "Ctrl+Shift", key = "o", function = "changealpha", argument = +0.05 },
+	{ modifier = "Ctrl+Shift", key = "p", function = "changealpha", argument = -0.05 },
 	{ modifier = "None", key = "F11", function = "fullscreen" },
 	{ modifier = "Alt", key = "Return", function = "fullscreen" },
 	{ modifier = "Shift", key = "Page_Up", function = "kscrollup", argument = -1, screen = "Pri" },
 	{ modifier = "Shift", key = "Page_Down", function = "kscrolldown", argument = -1, screen = "Pri" },
-	{ modifier = "Ctrl+Shift", key = "Y", function = "paste" },
+	{ modifier = "Ctrl+Shift", key = "y", function = "paste" },
 	{ modifier = "Shift", key = "Insert", function = "paste" },
 	{ modifier = "Ctrl+Shift", key = "Num_Lock", function = "numlock" },
 	{ modifier = "Alt", key = "l", function = "copyurl" },
 	{ modifier = "Alt", key = "o", function = "opencopied", argument = "xdg-open" },
 	{ modifier = "Ctrl+Shift", key = "Return", function = "newterm" },
-	{ modifier = "Ctrl+Shift", key = "U", function = "externalpipe_screen_out", argument = "openurlcmd" },
-	{ modifier = "Ctrl+Shift", key = "M", function = "externalpipe_screen_in", argument = "setbgcolorcmd" },
-	{ modifier = "Ctrl+Shift", key = "I", function = "externalpipe_screen_inject", argument = "iso14755cmd" },
+	{ modifier = "Ctrl+Shift", key = "F5", function = "reload_config" },
+	{ modifier = "Ctrl+Shift", key = "u", function = "externalpipe_screen_out", argument = "openurlcmd" },
+	{ modifier = "Ctrl+Shift", key = "m", function = "externalpipe_screen_in", argument = "setbgcolorcmd" },
+	{ modifier = "Ctrl+Shift", key = "i", function = "externalpipe_screen_inject", argument = "iso14755cmd" },
 	{ modifier = "Ctrl+Shift", key = "Escape", function = "keyboard_select" },
-	{ modifier = "Ctrl+Shift", key = "F", function = "searchforward" },
-	{ modifier = "Ctrl+Shift", key = "B", function = "searchbackward" },
+	{ modifier = "Ctrl+Shift", key = "f", function = "searchforward" },
+	{ modifier = "Ctrl+Shift", key = "b", function = "searchbackward" },
 	{ modifier = "Ctrl", key = "Page_Up", function = "scrolltoprompt", argument = -1, screen = "Pri" },
 	{ modifier = "Ctrl", key = "Page_Down", function = "scrolltoprompt", argument = 1, screen = "Pri" },
 )
