Adding functionality flag for Alpha as that is more intuitive

--- a/st.cfg
+++ b/st.cfg
@@ -64,6 +64,8 @@ functionality:
 	# Allow certain non-interactive (insecure) window operations such as
    	# setting the clipboard text
 	AllowWindowOperations = false;
+	# Use a transparent background for st while keeping text opaque.
+	Alpha = true;
 	# Use different opacity levels depending on whether the terminal has
 	# focus or not.
 	AlphaFocusHighlight = false;
@@ -329,7 +331,7 @@ terminal_cursor = {
 
 # These are settings for the mouse cursor
 mouse_cursor = {
-	shape = "arrow";  # default shape of the mouse cursor
+	shape = "Xterm";  # default shape of the mouse cursor
 	url_shape = "hand2";  # shape of the mouse cursor when hovering URLs
 }
 
