Turns out that Ubuntu relies on an old version of libconfig that considers it a syntax error if the last element of a list is followed by a comma.

--- a/st.cfg
+++ b/st.cfg
@@ -33,7 +33,7 @@
 # Also see: http://freedesktop.org/software/fontconfig/fontconfig-user.html
 #
 fonts = (
-	"Liberation Mono:pixelsize=12:antialias=true:autohint=true",
+	"Liberation Mono:pixelsize=12:antialias=true:autohint=true"
 )
 
 # Border configuration
@@ -287,7 +287,7 @@ url_opener_cmd = "xdg-open";
 
 # State bits to ignore when matching key or button events. By default,
 # numlock (Mod2Mask) and keyboard layout (XK_SWITCH_MOD) are ignored.
-modifiers_to_ignore = "Mod2Mask|XK_SWITCH_MOD"
+modifiers_to_ignore = "Mod2Mask|XK_SWITCH_MOD";
 
 # Synchronized-Update timeout (in milliseconds)
 # https://gitlab.com/gnachman/iterm2/-/wikis/synchronized-updates-spec
@@ -362,9 +362,9 @@ terminal_size = {
 }
 
 # Maximum amount of lines that st should be able to scroll back
-scrollback_history = 2000
+scrollback_history = 2000;
 # The amount of scrollback history to start with and increment as and when needed
-scrollback_history_increment = 200
+scrollback_history_increment = 200;
 
 # Optionally a window icon can be specified here.
 # The image file must be in farbfeld format.
@@ -424,7 +424,7 @@ commands = (
 	{ name = "setbgcolorcmd", command = [ "/bin/sh", "-c", "printf '\033]11;#008000\007'" ] },
 	{ name = "iso14755cmd", command = [ "/bin/sh", "-c", "CODE=$(dmenu -e \"$WINDOWID\" -p \"codepoint:\" </dev/null) && printf \"\u$CODE\"" ] },
 	{ name = "nsxiv", command = [ "nsxiv" ] },
-	{ name = "xdg-open", command = [ "xdg-open" ] },
+	{ name = "xdg-open", command = [ "xdg-open" ] }
 )
 
 # Mouse button bindings for shortcuts.
@@ -471,7 +471,7 @@ mouse_bindings = (
 	{ modifier = "Any", button = 4, function = "kscrollup", argument = 1, screen = "Pri" },
 	{ modifier = "Any", button = 5, function = "kscrolldown", argument = 1, screen = "Pri" },
 	{ modifier = "Any", button = 4, function = "ttysend", argument = "\x19", screen = "Alt" },
-	{ modifier = "Any", button = 5, function = "ttysend", argument = "\x05", screen = "Alt" },
+	{ modifier = "Any", button = 5, function = "ttysend", argument = "\x05", screen = "Alt" }
 )
 
 #
@@ -533,5 +533,5 @@ keybindings = (
 	{ modifier = "Ctrl+Shift", key = "f", function = "searchforward" },
 	{ modifier = "Ctrl+Shift", key = "b", function = "searchbackward" },
 	{ modifier = "Ctrl", key = "Page_Up", function = "scrolltoprompt", argument = -1, screen = "Pri" },
-	{ modifier = "Ctrl", key = "Page_Down", function = "scrolltoprompt", argument = 1, screen = "Pri" },
+	{ modifier = "Ctrl", key = "Page_Down", function = "scrolltoprompt", argument = 1, screen = "Pri" }
 )
