colors: selection background and foreground should be the inverse of the normal background and foreground in the default config

--- a/st.cfg
+++ b/st.cfg
@@ -243,8 +243,8 @@ colors = {
 	cursor_reverse = "#555555"
 	background = "#000000"
 	foreground = "#e5e5e5"
-	selection_background = "background"
-	selection_foreground = "foreground"
+	selection_background = "foreground"
+	selection_foreground = "background"
 	highlight_background = 160
 	highlight_foreground = 15
 	focused_background = 0
