--- a/st.cfg
+++ b/st.cfg
@@ -174,6 +174,9 @@ chscale = 1.0;
 # Whether the unfocused value is used depends on the AlphaFocusHighlight
 # functionality being enabled.
 #
+# The selection_background alpha value applies when the
+# UseSelectionBackgroundColor functionality is enabled.
+#
 # The gradient constant defines the minimum opacity for the calculated
 # gradient transparency levels.
 #
@@ -181,6 +184,7 @@ alpha:
 {
 	focused = 0.80;
 	unfocused = 0.60;
+	selection_background = 1.0;
 	gradient_minimum = 0.46;
 }
 
